--- a/ARKicktoupload 6_04/index.html
+++ b/ARKicktoupload 6_04/index.html
@@ -4,13 +4,16 @@
 	  <link rel="stylesheet" href="css/style.css">
 	  <script src="js/jquery.js"></script>
 	  <script src="js/category.js"></script>
+    <script src="architect://architect.js"></script>
 	  <script src="js/imageCache.js"></script>
 	  <script src="js/preloadhome.js"></script>
 	  <script src="js/preload.js"></script>
-	  
+    <script type="application/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	  <script src="js/getlocation.js"></script>
+
 	  
 	<head>
-<body onload="displayinfo()">
+<body>
 	<div id="homescreen">
 		<div id="centerButtonDiv"></div>
 		<div id="speakButtonDiv"></div>
@@ -132,16 +135,43 @@
     </ul>
   </div>
 	<div id="browsermode">
-
+        <img id="zoom" src="img/button.png" style="position:absolute; bottom:5%; width:20%; left:2.5%;"></img>
+        <img id="delete" src="img/button.png" style="position:absolute; bottom:5%; width:20%; left:27.5%;"></img>
+        <img id="info" src="img/button.png" style="position:absolute; bottom:5%; width:20%; left:52.5%;"></img>
+        <img id="refresh" src="img/button.png" style="position:absolute; bottom:5%; width:20%; left:77.5%;"></img>
+        <img id="plus" src="img/button.png" style="position:absolute; top:5%; width:15%; right:40%;"></img>
+        <img id="minus" src="img/button.png" style="position:absolute; top:5%; width:15%; right:22.5%;"></img>
+        <img id="home" src="img/button.png" style="position:absolute; top:5%; width:15%; right:5%;"></img>
+        <div id="time" style="position:absolute; top:20%; width:25%; right:5%; text-align: center;" >
+        <img id="timeimg" src="img/button.png" style="position:absolute; top:0%; width:100%; right:0%;"></img>
+        <span id="timetxt" style="display: inline-block; vertical-align: middle;line-height: normal;position:relative; top:5%; color:white;">12m</span>
+        <div>
 
   </div>
 	<div id="infoscreen">
     <div id="imgcon1" class="imgcontainer1"></div>
     <div id="imgcon2" class="imgcontainer2"></div>
     <div id="imgcon3" class="imgcontainer3"></div>
+    <div id="infoadd">
+      <span id="name"></span>
+      <span id="address"></span>
+      <span id="citystate"></span>
+      <span id="country"></span>
+      <span id="phonenum"></span>
+      <div id="rating">
+          <span id="ratingvalue">ss</span>
+      </div>
+    </div>
+    <div id="tips"></div>
+    <div id="mapdisplay">
+      <div id="map_canvas" style="height:100%; width:100%;"></div>
+    </div>
   </div>
+  
 	<div id="sidekickmode"></div>
 	<div id="settings"></div>
 	<script src="js/app.js"></script>
+  <script src="js/browser.js"></script>
+  
 	<body>
 </html>
